<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_bluetooth"
        android:orderInCategory="90"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_bluetooth"
        android:titleCondensed="@string/action_bluetooth_condensed"
        android:icon="@drawable/device_access_bluetooth" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <!--
    <item
        android:id="@+id/action_donate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_donate" />
        -->
    <item
        android:id="@+id/action_help"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_help" />

</menu>